<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnvironmentSensors</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="list">Env. Sensor List</string>
    <string name="amb_temp">Ambient Temperature</string>
    <string name="light">Light</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Relative Humidity</string>
    <string name="temp">Temperature</string>
    <string name="na">N. A.</string>
    <string name="footnote">N. A. implies Not Available.</string>

</resources>